--- a/index.html
+++ b/index.html
@@ -51,38 +51,38 @@
                 <a href="./detail-movie.html"> <img class="imagen" src="./img/AvengersEndgame.jpg" alt=" Foto de Avengers:EndGame"> </a>
 
                 <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-movie.html">Avengers:EndGame</a>
+                    <a class="titulopelicula" href="./detail-movie.html"></a>
                 </h3>
-                <p class="titulopelicula">Estreno: 22/4/19 </p>
+                <p class="titulopelicula"></p>
             </article>
             <article class="imagenpp">
                 <a href="./detail-movie.html"> <img class="imagen" src="./img/batmanCabalero.png" alt=" Foto de Batman: The Dark Knight"> </a>
                 <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-movie.html">Batman: The Dark Knight</a>
+                    <a class="titulopelicula" href="./detail-movie.html"></a>
                 </h3>
-                <p class="titulopelicula">Estreno: 17/7/2008 </p>
+                <p class="titulopelicula"> </p>
             </article>
             <article>
                 <a href="./detail-movie.html"> <img class="imagen" src="./img/SuicideSquad.jpg" alt=" Foto de The Suicide Squad"> </a>
                 <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-movie.html">The Suicide Squad</a>
+                    <a class="titulopelicula" href="./detail-movie.html"></a>
                 </h3>
-                <p class="titulopelicula">Estreno: 5/08/2021 </p>
+                <p class="titulopelicula"></p>
             </article>
             <article>
                 <a href="./detail-movie.html"> <img class="imagen" src="img/spiderman.png" alt=" Foto de Spiderman: Far From Home"> </a>
                 <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-movie.html">Spiderman: Far From Home</a>
+                    <a class="titulopelicula" href="./detail-movie.html"></a>
                 </h3>
-                <p class="titulopelicula">Estreno: 2/6/2019 </p>
+                <p class="titulopelicula"></p>
             </article>
             <article>
                 <a href="./detail-movie.html"> <img class="imagen" src="./img/venom.jpg" alt="Venom">
                 </a>
                 <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-movie.html">Venom</a>
+                    <a class="titulopelicula" href="./detail-movie.html"></a>
                 </h3>
-                <p class="titulopelicula">Estreno: 4/10/2018 </p>
+                <p class="titulopelicula"></p>
             </article>
         </section>
             <H2 class="tituloinicial">SERIES POPULARES:</H2>
@@ -90,37 +90,37 @@
             <article>
                 <a href="./detail-series.html"> <img class="imagen" src="./img-series/titans.jpg" alt="Foto de Titans"> </a>
                 <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-series.html">Titans</a>
+                    <a class="titulopelicula" href="./detail-series.html"></a>
                 </h3>
-                <p class="titulopelicula">Estreno: 12/10/2018 </p>
+                <p class="titulopelicula"></p>
             </article>
             <article>
                 <a href="./detail-series.html"> <img class="imagen" src="./img-series/daredevil.jpg" alt="Foto de Daredevil"> </a>
                 <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-series.html">Daredevil</a>
+                    <a class="titulopelicula" href="./detail-series.html"></a>
                 </h3>
-                <p class="titulopelicula">Estreno: 10/04/15 </p>
+                <p class="titulopelicula"></p>
             </article>
             <article>
                 <a href="./detail-series.html"> <img class="imagen" src="./img-series/watchmen.png" alt="Foto de Watchmen"> </a>
                 <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-series.html">Watchmen</a>
+                    <a class="titulopelicula" href="./detail-series.html"></a>
                 </h3>
-                <p class="titulopelicula">Estreno: 20/10/2019 </p>
+                <p class="titulopelicula"></p>
             </article>
             <article>
                 <a href="./detail-series.html"> <img class="imagen" src="./img-series/gotham.jpg" alt="Foto de Gotham"></a>
                 <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-series.html">Gotham</a>
+                    <a class="titulopelicula" href="./detail-series.html"></a>
                 </h3>
-                <p class="titulopelicula">Estreno: 22/9/2014 </p>
+                <p class="titulopelicula"></p>
             </article>
             <article>
                 <a href="./detail-series.html"> <img class="imagen" src="./img-series/loki.jpg" alt="Foto de Loki"> </a>
                 <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-series.html">Loki</a>
+                    <a class="titulopelicula" href="./detail-series.html"></a>
                 </h3>
-                <p class="titulopelicula">Estreno: 9/6/2021 </p>
+                <p class="titulopelicula"></p>
             </article>
         </section>
             <h2 class="tituloinicial">PELICULAS MÁS VALORADAS:</h2>
@@ -128,9 +128,9 @@
             <article>
                 <a href=""> <img class="imagen" src="./img-series-nuevo/infinitywar.png" alt="Foto de Avengers: IninityWar"> </a>
                 <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-movie.html" id="pelicula">Avengers: IninityWar</a>
+                    <a class="titulopelicula" href="./detail-movie.html" id="pelicula"></a>
                 </h3>
-                <p class="titulopelicula">Estreno: 22/4/2019 </p>
+                <p class="titulopelicula"></p>
             </article>
             <article>
                 <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/deadPool.jpg" alt="Foto de DeadPool"> </a>
@@ -149,9 +149,9 @@
             <article>
                 <a href=""> <img class="imagen" src="./img/justiceLeague.png" alt="Foto de Justice League"> </a>
                 <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-movie.html" id="pelicula" >Justice League</a>
+                    <a class="titulopelicula" href="./detail-movie.html" id="pelicula" ></a>
                 </h3>
-                <p class="titulopelicula">Estreno: 16/11/2017 </p>
+                <p class="titulopelicula"></p>
             </article>
             <article>
                 <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/spiderman2.jpg" alt="Foto de Spiderman 2"> </a>
