haciendo js del index

--- a/index.html
+++ b/index.html
@@ -86,42 +86,9 @@
             </article>
         </section>
             <H2 class="tituloinicial">SERIES POPULARES:</H2>
-        <section class="primerasection">
-            <article>
-                <a href="./detail-series.html"> <img class="imagen" src="./img-series/titans.jpg" alt="Foto de Titans"> </a>
-                <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-series.html"></a>
-                </h3>
-                <p class="titulopelicula"></p>
-            </article>
-            <article>
-                <a href="./detail-series.html"> <img class="imagen" src="./img-series/daredevil.jpg" alt="Foto de Daredevil"> </a>
-                <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-series.html"></a>
-                </h3>
-                <p class="titulopelicula"></p>
-            </article>
-            <article>
-                <a href="./detail-series.html"> <img class="imagen" src="./img-series/watchmen.png" alt="Foto de Watchmen"> </a>
-                <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-series.html"></a>
-                </h3>
-                <p class="titulopelicula"></p>
-            </article>
-            <article>
-                <a href="./detail-series.html"> <img class="imagen" src="./img-series/gotham.jpg" alt="Foto de Gotham"></a>
-                <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-series.html"></a>
-                </h3>
-                <p class="titulopelicula"></p>
-            </article>
-            <article>
-                <a href="./detail-series.html"> <img class="imagen" src="./img-series/loki.jpg" alt="Foto de Loki"> </a>
-                <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-series.html"></a>
-                </h3>
-                <p class="titulopelicula"></p>
-            </article>
+        <section class="primerasection" id="prueba">
+            
+            
         </section>
             <h2 class="tituloinicial">PELICULAS MÁS VALORADAS:</h2>
         <section class="primerasection">
