Cambios al Index

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </article>
         </section>
             <H2 class="tituloinicial">SERIES POPULARES:</H2>
-        <section class="primerasection" id="prueba">
+        <section id="prueba">
             
             
         </section>
