--- a/detail-series.html
+++ b/detail-series.html
@@ -11,7 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Bebas+Neue&family=Commissioner:wght@100;500&family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bangers&family=Bebas+Neue&family=Commissioner:wght@100;500&family=Luckiest+Guy&display=swap"
+        rel="stylesheet">
 </head>
 </head>
 
@@ -48,9 +50,9 @@
         </div>
         <section class="sectionpadre">
             <article class="serieprincipal">
-                <h3 class="titulosdetalles">Titans</h3>
-                <h4 class="duracion">Temporada: 3</h4>
-                <img class="imagen" src="./img-series/titans.jpg" alt="Foto de Titans">
+                <h3 class="titulosdetalles"></h3>
+                <h4 class="duracion"></h4>
+                <img class="imagen" src="./img-series/titans.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
@@ -70,137 +72,12 @@
                 <h4 class="calificacion">Calificación</h4>
                 <p class="puntuacion">7.6/10⭐</p>
                 <h4>
-                    <a class="calificacion" href="./genres.html">Género:</a>
+                    <a class="calificacion" id=href="./genres.html">Género:</a>
                 </h4>
-                <p class="puntuacion"><a href="./detail-genres.html"class="colorLetraGenero"> Ciencia Ficción</a></p>
+                <p class="puntuacion"><a href="./detail-genres.html" class="colorLetraGenero"> Ciencia Ficción</a></p>
 
                 <h4 class="estreno">Fecha de Estreno</h4>
                 <p class="estreno">12/10/2018</p>
-            </article>
-        </section>
-        <section class="sectionpadre">
-            <article class="serieprincipal">
-                <h3 class="titulosdetalles">Daredevil</h3>
-                <h4 class="duracion">Temporadas: 3</h4>
-                <img class="imagen" src="./img-series/daredevil.jpg" alt="Foto de Daredevil">
-                <div class="botonfavorito">
-                    <div class="letrasfavorito">
-                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
-                    </div>
-                </div>
-            </article>
-            <article class="cajadatos">
-                <h4 class="sinopsis">Sínopsis:</h4>
-                <p class="informacion">
-                    La serie de Daredevil gira en torno a Matthew Murdock, un abogado de día y superhéroe de noche. A
-                    pesar
-                    de ser ciego, posee un oído, un olfato, una fuerza y una agilidad increíblemente desarrolladas. Sin
-                    descanso, Matthew Murdock recorrerá las calles de Nueva York a la caza de todo tipo de criminales a
-                    los
-                    que no puede castigar un tribunal.
-                </p>
-                <h4 class="calificacion">Calificación:</h4>
-                <p class="puntuacion">8.6/10⭐</p>
-                <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Acción</a></p>
-                <h4>
-                    <a class="calificacion" href="./detail-genres.html">Género:</a>
-                </h4>
-                <p class="estreno">10/4/2015</p>
-            </article>
-        </section>
-        <section class="sectionpadre">
-            <article class="serieprincipal">
-                <h3 class="titulosdetalles">Watchmen</h3>
-                <h4 class="duracion">Temporadas: 1</h4>
-                <img class="imagen" src="./img-series/Watchmen.png" alt="Foto de Watchmen">
-                <div class="botonfavorito">
-                    <div class="letrasfavorito">
-                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
-                    </div>
-                </div>
-            </article>
-            <article class="cajadatos">
-                <h4 class="sinopsis">Sínopsis:</h4>
-                <p class="informacion">
-                    Ambientada en un universo alternativo en el que los vigilantes enmascarados son tratados como
-                    criminales, la serie 'Watchmen' utiliza el universo del cómic original creado por Alan Moore para
-                    crear
-                    un contenido completamente nuevo.
-                </p>
-                <h4 class="calificacion">Calificación:</h4>
-                <p class="puntuacion">8.2/10⭐</p>
-                <h4>
-                    <a class="calificacion" href="./genres.html">Género:</a>
-                </h4>
-                <p class="puntuacion"><a href="./detail-genres.html"class="colorLetraGenero"> Acción</a></p>
-                <h4 class="estreno">Fecha de Estreno:</h4>
-                <p class="estreno">20/10/2019</p>
-            </article>
-        </section>
-
-        <section class="sectionpadre">
-            <article class="serieprincipal">
-                <h3 class="titulosdetalles">Gotham</h3>
-                <h4>
-                    <a class="calificacion" href="./genres.html">Género:</a>
-                </h4>
-                <img class="imagen" src="./img-series/gotham.jpg" alt="Foto de Gotham">
-                <div class="botonfavorito">
-                    <div class="letrasfavorito">
-                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
-                    </div>
-                </div>
-            </article>
-            <article class="cajadatos">
-                <h4 class="sinopsis">Sínopsis:</h4>
-                <p class="informacion">
-                    Precuela de los cómics de Batman, centrada en la adolescencia de Bruce Wayne. Definida por sus
-                    responsables como una especie de Smallville, desarrolla la vida de Jim Gordon como policía, y la
-                    enlaza
-                    con el origen del mito de Batman y de otros villanos como El Pingüino.
-                </p>
-                <h4 class="calificacion">Calificación:</h4>
-                <p class="puntuacion">7.8/10⭐</p>
-                <h4>
-                    <a class="calificacion" href="./genres.html">Género:</a>
-                </h4>
-                <p class="puntuacion"><a href="./detail-genres.html"class="colorLetraGenero"> Acción</a></p>
-                <h4 class="estreno">Fecha de Estreno:</h4>
-                <p class="estreno">22/9/2014</p>
-            </article>
-        </section>
-        <section class="sectionpadre">
-            <article class="serieprincipal">
-                <h3 class="titulosdetalles">Loki</h3>
-                <h4 class="duracion">Temporadas: 1</h4>
-                <img class="imagen" src="./img-series/loki.jpg" alt="Foto de Loki">
-                <div class="botonfavorito">
-                    <div class="letrasfavorito">
-                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
-                    </div>
-                </div>
-            </article>
-            <article class="cajadatos">
-                <h4 class="sinopsis">Sínopsis:</h4>
-                <p class="informacion">
-                    Loki es llevado ante la misteriosa organización llamada Autoridad de Variación Temporal
-                    después de robar el Cubo Cósmico durante los eventos de Avengers: Endgame (2019) y se le da
-                    a elegir
-                    enfrentarse a la eliminación de la realidad o ayudar contra una amenaza mayor,​ por lo cual
-                    Loki termina viajando a través del tiempo, alterando la historia humana.
-
-                    Confirmada renovación para una segunda temporada.
-
-                </p>
-                <h4 class="calificacion">Calificación:</h4>
-                <p class="puntuacion">8.4/10⭐</p>
-                <h4>
-                    <a class="calificacion" href="./genres.html">Género:</a>
-                </h4>
-                <p class="puntuacion"><a href="./detail-genres.html"class="colorLetraGenero"> Familia</a></p>
-                <h4 class="estreno">Fecha de Estreno:</h4>
-                <p class="estreno">9/6/2021</p>
             </article>
         </section>
     </main>
