Cmabios en el js

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
                     <i class="fas fa-search"></i>
                 </button>
             </div>
+            <div>
+                <p class="mensaje" >  </p>
+
+            </div>   
         </form>
         <ul type="none" class="controles">
             <li>
@@ -45,10 +49,11 @@
         </ul>
     </header>
     <main>
-            <h2 class="tituloinicial">PELICULAS POPULARES:</h2>
+        <h2 class="tituloinicial">PELICULAS POPULARES:</h2>
         <section class="primerasection">
             <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img/AvengersEndgame.jpg" alt=" Foto de Avengers:EndGame"> </a>
+                <a href="./detail-movie.html"> <img class="imagen" src="./img/AvengersEndgame.jpg"
+                        alt=" Foto de Avengers:EndGame"> </a>
 
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html"></a>
@@ -56,21 +61,24 @@
                 <p class="titulopelicula"></p>
             </article>
             <article class="imagenpp">
-                <a href="./detail-movie.html"> <img class="imagen" src="./img/batmanCabalero.png" alt=" Foto de Batman: The Dark Knight"> </a>
+                <a href="./detail-movie.html"> <img class="imagen" src="./img/batmanCabalero.png"
+                        alt=" Foto de Batman: The Dark Knight"> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html"></a>
                 </h3>
                 <p class="titulopelicula"> </p>
             </article>
             <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img/SuicideSquad.jpg" alt=" Foto de The Suicide Squad"> </a>
+                <a href="./detail-movie.html"> <img class="imagen" src="./img/SuicideSquad.jpg"
+                        alt=" Foto de The Suicide Squad"> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html"></a>
                 </h3>
                 <p class="titulopelicula"></p>
             </article>
             <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="img/spiderman.png" alt=" Foto de Spiderman: Far From Home"> </a>
+                <a href="./detail-movie.html"> <img class="imagen" src="img/spiderman.png"
+                        alt=" Foto de Spiderman: Far From Home"> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html"></a>
                 </h3>
@@ -80,34 +88,37 @@
                 <a href="./detail-movie.html"> <img class="imagen" src="./img/venom.jpg" alt="Venom">
                 </a>
                 <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-movie.html"></a>
+                    <a class="titulopelicula" href="./detail-movie.html">Hola mundo</a>
                 </h3>
                 <p class="titulopelicula"></p>
             </article>
         </section>
-            <H2 class="tituloinicial">SERIES POPULARES:</H2>
-        <section id="prueba">
-            
-            
+        <H2 class="tituloinicial">SERIES POPULARES:</H2>
+        <section class="primerasection" id="prueba">
+
+
         </section>
-            <h2 class="tituloinicial">PELICULAS MÁS VALORADAS:</h2>
+        <h2 class="tituloinicial">PELICULAS MÁS VALORADAS:</h2>
         <section class="primerasection">
             <article>
-                <a href=""> <img class="imagen" src="./img-series-nuevo/infinitywar.png" alt="Foto de Avengers: IninityWar"> </a>
+                <a href=""> <img class="imagen" src="./img-series-nuevo/infinitywar.png"
+                        alt="Foto de Avengers: IninityWar"> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html" id="pelicula"></a>
                 </h3>
                 <p class="titulopelicula"></p>
             </article>
             <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/deadPool.jpg" alt="Foto de DeadPool"> </a>
+                <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/deadPool.jpg"
+                        alt="Foto de DeadPool"> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html" id="pelicula">DeadPool</a>
                 </h3>
                 <p class="titulopelicula">Estreno: 11/2/2016 </p>
             </article>
             <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/ironMan.jpg" alt="Foto de Iron Man"> </a>
+                <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/ironMan.jpg"
+                        alt="Foto de Iron Man"> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html" id="pelicula">Iron Man</a>
                 </h3>
@@ -116,20 +127,20 @@
             <article>
                 <a href=""> <img class="imagen" src="./img/justiceLeague.png" alt="Foto de Justice League"> </a>
                 <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-movie.html" id="pelicula" ></a>
+                    <a class="titulopelicula" href="./detail-movie.html" id="pelicula"></a>
                 </h3>
                 <p class="titulopelicula"></p>
             </article>
             <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/spiderman2.jpg" alt="Foto de Spiderman 2"> </a>
+                <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/spiderman2.jpg"
+                        alt="Foto de Spiderman 2"> </a>
                 <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-movie.html" id="pelicula" >Spiderman 2</a>
+                    <a class="titulopelicula" href="./detail-movie.html" id="pelicula">Spiderman 2</a>
                 </h3>
                 <p class="titulopelicula">Estreno: 1/07/2004 </p>
             </article>
         </section>
     </main>
-    <script src="./index.js"></script>
     <footer>
         <section>
             <ul type="none" class="footer">
@@ -148,6 +159,8 @@
             </ul>
         </section>
     </footer>
+    <script src="./js/index.js"></script>
+    <script src="./js/formularios.js"></script>
 
 
 </body>
