Terminando detalles de series y peliculas

--- a/detail-series.html
+++ b/detail-series.html
@@ -61,12 +61,7 @@
             </article>
             <article class="cajadatos">
                 <h4 class="sinopsis">Sínopsis:</h4>
-                <p class="informacion">Se trata de una reunión de distintos personajes de los cómics de DC que se unen
-                    para formar un grupo
-                    de
-                    jóvenes superhéroes. El antiguo compañero de Batman, Nightwing, se encuentra con una serie de
-                    jóvenes
-                    héroes con problemas que necesitan un mentor desesperadamente para volver a encauzar sus vidas.
+                <p class="informacion">
                 </p>
 
                 <h4 class="calificacion">Calificación</h4>
@@ -77,8 +72,9 @@
                 <p class="puntuacion"><a href="./detail-genres.html" class="colorLetraGenero"> Ciencia Ficción</a></p>
 
                 <h4 class="estreno">Fecha de Estreno</h4>
-                <p class="estreno">12/10/2018</p>
+                <p class="estreno"></p>
             </article>
+            <script>src="./js/detail-serie.js"</script>
         </section>
     </main>
     <footer>
@@ -97,6 +93,7 @@
                     <a class="gmail" href="mailto:blastra@udesa.edu.ar">blastra@udesa.edu.ar</a>
                 </li>
             </ul>
+            
         </section>
     </footer>
 </body>
