Terminando arreglos en el index.js

--- a/index.html
+++ b/index.html
@@ -49,96 +49,18 @@
         </ul>
     </header>
     <main>
-        <h2 class="tituloinicial">PELICULAS POPULARES:</h2>
+        <h2 class="tituloinicial" id='seriesTop' >SERIES POPULARES:</h2>
         <section class="primerasection">
-            <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img/AvengersEndgame.jpg"
-                        alt=" Foto de Avengers:EndGame"> </a>
-
-                <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-movie.html"></a>
-                </h3>
-                <p class="titulopelicula"></p>
-            </article>
-            <article class="imagenpp">
-                <a href="./detail-movie.html"> <img class="imagen" src="./img/batmanCabalero.png"
-                        alt=" Foto de Batman: The Dark Knight"> </a>
-                <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-movie.html"></a>
-                </h3>
-                <p class="titulopelicula"> </p>
-            </article>
-            <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img/SuicideSquad.jpg"
-                        alt=" Foto de The Suicide Squad"> </a>
-                <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-movie.html"></a>
-                </h3>
-                <p class="titulopelicula"></p>
-            </article>
-            <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="img/spiderman.png"
-                        alt=" Foto de Spiderman: Far From Home"> </a>
-                <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-movie.html"></a>
-                </h3>
-                <p class="titulopelicula"></p>
-            </article>
-            <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img/venom.jpg" alt="Venom">
-                </a>
-                <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-movie.html">Hola mundo</a>
-                </h3>
-                <p class="titulopelicula"></p>
-            </article>
+            
         </section>
-        <H2 class="tituloinicial">SERIES POPULARES:</H2>
+        <H2 class="tituloinicial">PELICULAS POPULARES:</H2>
         <section class="primerasection" id="prueba">
 
 
         </section>
         <h2 class="tituloinicial">PELICULAS MÁS VALORADAS:</h2>
-        <section class="primerasection">
-            <article>
-                <a href=""> <img class="imagen" src="./img-series-nuevo/infinitywar.png"
-                        alt="Foto de Avengers: IninityWar"> </a>
-                <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-movie.html" id="pelicula"></a>
-                </h3>
-                <p class="titulopelicula"></p>
-            </article>
-            <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/deadPool.jpg"
-                        alt="Foto de DeadPool"> </a>
-                <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-movie.html" id="pelicula">DeadPool</a>
-                </h3>
-                <p class="titulopelicula">Estreno: 11/2/2016 </p>
-            </article>
-            <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/ironMan.jpg"
-                        alt="Foto de Iron Man"> </a>
-                <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-movie.html" id="pelicula">Iron Man</a>
-                </h3>
-                <p class="titulopelicula">Estreno: 30/04/2008 </p>
-            </article>
-            <article>
-                <a href=""> <img class="imagen" src="./img/justiceLeague.png" alt="Foto de Justice League"> </a>
-                <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-movie.html" id="pelicula"></a>
-                </h3>
-                <p class="titulopelicula"></p>
-            </article>
-            <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/spiderman2.jpg"
-                        alt="Foto de Spiderman 2"> </a>
-                <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-movie.html" id="pelicula">Spiderman 2</a>
-                </h3>
-                <p class="titulopelicula">Estreno: 1/07/2004 </p>
-            </article>
+        <section class="primerasection" id="peliculasTop">
+            
         </section>
     </main>
     <footer>
