Arreglo en el index

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         </ul>
     </header>
     <main>
-        <h2 class="tituloinicial" id='seriesTop' >SERIES POPULARES:</h2>
-        <section class="primerasection">
+        <h2 class="tituloinicial">SERIES POPULARES:</h2>
+        <section class="primerasection" id="seriesTop" >
             
         </section>
         <H2 class="tituloinicial">PELICULAS POPULARES:</H2>
