--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </h1>
         <form action="./search-results.html" method="GET" class="buscador">
             <div>
-                <input type="text" name="buscar" placeholder="Buscar..">
+                <input class="input"  type="text" name="buscar" placeholder="Buscar..">
             </div>
             <div>
                 <button type="submit" class="boton">
@@ -82,6 +82,7 @@
         </section>
     </footer>
     <script src="./js/index.js"></script>
+    <script src="./js/formularios.js" ></script>
 
 
 </body>
