terminando details series y movies + lista fav

--- a/detail-movie.html
+++ b/detail-movie.html
@@ -74,7 +74,7 @@
                 <p class="puntuacion"></p>
 
                 <h4>
-                    <a class="calificacion" href="./genres.html">Género:</a>
+                    <a class="generoSinSub" href="./genres.html">Género:</a>
                 </h4>
                 <p class="puntuacion"><a href="./genres.html" id="genero" class="colorLetraGenero"></a></p>
                 <h4 class="estreno">Fecha de Estreno:</h4>
@@ -102,5 +102,5 @@
     </footer>
 </body>
 <script src="./js/detail-movie.js"></script>
-
+<script src="./js/lista-favoritos.js"></script>
 </html>
