--- a/detail-series.html
+++ b/detail-series.html
@@ -52,7 +52,7 @@
             <article class="serieprincipal">
                 <h3 class="titulosdetalles"></h3>
                 <h4 class="duracion"></h4>
-                <img class="imagen" src="./img-series/titans.jpg" alt="">
+                <img class="imagen" src="" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
@@ -65,11 +65,11 @@
                 </p>
 
                 <h4 class="calificacion">Calificación</h4>
-                <p class="puntuacion">7.6/10⭐</p>
+                <p class="puntuacion"></p>
                 <h4>
-                    <a class="calificacion" id=href="./genres.html">Género:</a>
+                    <a class="generoSinSub" id=href="./genres.html">Género:</a>
                 </h4>
-                <p class="puntuacion"><a href="./detail-genres.html" class="colorLetraGenero"> Ciencia Ficción</a></p>
+                <p class="puntuacion"><a href="./detail-genres.html" class="colorLetraGenero"> </a></p>
 
                 <h4 class="estreno">Fecha de Estreno</h4>
                 <p class="estreno"></p>
@@ -97,5 +97,6 @@
         </section>
     </footer>
 </body>
-
+<script src="./js/detail-serie.js"></script>
+<script src="./js/lista-favoritos.js"></script>
 </html>
